--- a/CSA/HTMLStorePage/WebSite/index.html
+++ b/CSA/HTMLStorePage/WebSite/index.html
@@ -13,47 +13,65 @@
     <div class="flex-container">
         <div class="spacing">
             <a href="./snacks/drinks/MountainDew.html">
-            <p1>Mountain Dew<br></p1>
-            <img src="./pictures/mountainDew.webp" alt="Mountain Dew">
+                <p1>Mountain Dew<br></p1>
+                <div class="center-flex">
+                    <img src="./pictures/mountainDew.webp" alt="Mountain Dew">
+                </div>
             </a>
         </div>
         <div class="spacing"> 
             <p1>Push Pop<br></p1>
-            <img src="./pictures/pushPop.webp" alt="Push Pop">
+            <div class="center-flex">
+                <img src="./pictures/pushPop.webp" alt="Push Pop">
+            </div>
         </div>
         <div class="spacing">
             <a href="./snacks/foods/snickers.html">
-            <p1>Snickers<br></p1>
-            <img src="./pictures/snickers.webp" alt="Snickers">
+                <p1>Snickers<br></p1>
+                <div class="center-flex">
+                    <img src="./pictures/snickers.webp" alt="Snickers">
+                </div>
             </a>
         </div>
         <div class="spacing"> 
             <a href="./snacks/foods/oreos.html">
-            <p1>Oreo (6 Cookies/Pack)<br></p1>
-            <img src="./pictures/oreoCookies.webp" alt="Oreos">
+                <div class="center-flex">
+                <p1>Oreo (6 Cookies/Pack)<br></p1>
+                   <img src="./pictures/oreoCookies.webp" alt="Oreos">
+                </div>
             </a>
         </div>
  
         <div class="spacing"> 
             <p1>Swedish Fish<br></p1>
-            <img src="./pictures/swedishFish.webp" alt="Swedish Fish">
+            <div class="center-flex">
+                <img src="./pictures/swedishFish.webp" alt="Swedish Fish">
+            </div>
         </div>
         <div class="spacing"> 
             <p1>Monster Energy<br></p1>
-            <img src="./pictures/monsterEnergy.webp" alt="Monster Energy">
+            <div class="center-flex">
+                <img src="./pictures/monsterEnergy.webp" alt="Monster Energy">
+            </div>
         </div>
 
         <div class="spacing"> 
             <p1>Twix Bar<br></p1>
-            <img src="./pictures/twixBar.webp" alt="Twix Bar">
+            <div class="center-flex">
+                <img src="./pictures/twixBar.webp" alt="Twix Bar">
+            </div>
         </div>
         <div class="spacing"> 
             <p1>Ruffles Original<br></p1>
-            <img src="./pictures/rufflesOriginal.webp" alt="Ruffles Original">
+            <div class="center-flex">
+                <img src="./pictures/rufflesOriginal.webp" alt="Ruffles Original">
+            </div>
         </div>
         <div class="spacing"> 
             <p1>Oatmeal Cream Pie<br></p1>
-            <img src="./pictures/oatmealCreamPie.webp" alt="Oatmeal Cream Pie">
+            <div class="center-flex">
+                <img src="./pictures/oatmealCreamPie.webp" alt="Oatmeal Cream Pie">
+            </div>
         </div>
     </div>
     </div>
