--- a/CSA/HTMLStorePage/WebSite/snacks/foods/oreos.html
+++ b/CSA/HTMLStorePage/WebSite/snacks/foods/oreos.html
@@ -15,10 +15,10 @@
     <div id="wowslider-container1">
 	<div class="ws_images">
     <ul>
-		<li><img src="/pictures/oreoCookies.webp" alt="A Package of Oreos" id="wows1_0" class="center"></li>
-        <li><img src="/pictures/oreoInformation.webp" alt ="Oreo Nutritional Information" class="center" id="wows1_1"></li>
-        <li><img src="/pictures/oreoStack.webp" alt="A Stack of Oreos", Split in Two" class="center" id="wows1_2"></li>
-        <li><img src="/pictures/oreoIngre.webp" alt="Oreo Ingredients" class="center" id="wows1_3"></li>
+		<li><img src="./pictures/oreoCookies.webp" alt="A Package of Oreos" id="wows1_0" class="center"></li>
+        <li><img src="./pictures/oreoInformation.webp" alt ="Oreo Nutritional Information" class="center" id="wows1_1"></li>
+        <li><img src="./pictures/oreoStack.webp" alt="A Stack of Oreos", Split in Two" class="center" id="wows1_2"></li>
+        <li><img src="./pictures/oreoIngre.webp" alt="Oreo Ingredients" class="center" id="wows1_3"></li>
     </ul>        
 	</div>
     </div>
