worked on website and some gs

--- a/CSA/HTMLStorePage/WebSite/snacks/drinks/MountainDew.html
+++ b/CSA/HTMLStorePage/WebSite/snacks/drinks/MountainDew.html
@@ -13,13 +13,16 @@
     <!--https://wowslider.com/html5-slideshow-luxury-slices-demo.html-->
     <link rel="stylesheet" type="text/css" href="https://wowslider.com/sliders/demo-47/engine1/style.css">
     <div id="wowslider-container1">
-	<div class="ws_images"><ul>
-		<li><img src="/pictures/mountainDew.webp" alt="Mountain Dew" id="wows1_0" class="center"></li>
-        <li><img src="/pictures/mdnutInfo.webp" alt ="Mountain Dew Nutritional Information" class="center" id="wows1_1"></li>
-        <li><img src="/pictures/dewBottles.webp" alt="Multiple Mountain Dew Bottles" class="center" id="wows1_2"></li>
-        <li><img src="/pictures/dewLogo.webp" alt="Mountain Dew Logo" class="center" id="wows1_3"></li>
-    </ul>        
-	</div>
+        <div class="scrollingImages">
+            <div class="ws_images">
+                <ul>
+                    <li><img src="../../pictures/mountainDew.webp" alt="Mountain Dew" id="wows1_0" class="center"></li>
+                    <li><img src="../../pictures/mdnutInfo.webp" alt ="Mountain Dew Nutritional Information" class="center" id="wows1_1"></li>
+                    <li><img src="../../pictures/dewBottles.webp" alt="Multiple Mountain Dew Bottles" class="center" id="wows1_2"></li>
+                    <li><img src="../../pictures/dewLogo.webp" alt="Mountain Dew Logo" class="center" id="wows1_3"></li>
+                </ul>        
+            </div>
+        </div>
     </div>
     <ul>
         <li><h2>Chuggable, intense refreshment</h2></li>
