worked on the start of fixing pokedex

--- a/CSA/HTMLStorePage/WebSite/checkout.html
+++ b/CSA/HTMLStorePage/WebSite/checkout.html
@@ -7,6 +7,9 @@
         <link href="checkout.css" rel="stylesheet" type="text/css"/>
     </head>
     <body id='mainBackground'>
-        <h1>TestText</h1>
+        <h1>Checkout</h1>
+        <table id="checkoutTable"> 
+            <th>Item</th>
+        </table>
     </body>
 </html>
