worked on website data pushes

--- a/CSA/HTMLStorePage/WebSite/checkout.html
+++ b/CSA/HTMLStorePage/WebSite/checkout.html
@@ -9,7 +9,14 @@
     <body id='mainBackground'>
         <h1>Checkout</h1>
         <table id="checkoutTable"> 
-            <th>Item</th>
+            <tr>
+                <th>Item</th>
+                <th>Price</th>
+                <th>Quantity</th>
+            </tr>
+            <div id="restOfOrder">
+
+            </div>
         </table>
     </body>
 </html>
