--- a/CSA/HTMLStorePage/WebSite/snacks/foods/snickers.html
+++ b/CSA/HTMLStorePage/WebSite/snacks/foods/snickers.html
@@ -15,10 +15,10 @@
     <div id="wowslider-container1">
 	<div class="ws_images">
     <ul>
-		<li><img src="/pictures/snickers.webp" alt="Box of Snickers" id="wows1_0" class="center"></li>
-        <li><img src="/pictures/snickersInfo.webp" alt ="Snickers Nutritional Information" class="center" id="wows1_1"></li>
-        <li><img src="/pictures/snickersBarOpen.webp" alt="Open Snickers Bar, Split in Two" class="center" id="wows1_2"></li>
-        <li><img src="/pictures/snickersLogo.png" alt="Snickers Logo" class="center" id="wows1_3"></li>
+		<li><img src="../../pictures/snickers.webp" alt="Box of Snickers" id="wows1_0" class="center"></li>
+        <li><img src="../../pictures/snickersInfo.webp" alt ="Snickers Nutritional Information" class="center" id="wows1_1"></li>
+        <li><img src="../../pictures/snickersBarOpen.webp" alt="Open Snickers Bar, Split in Two" class="center" id="wows1_2"></li>
+        <li><img src="../../pictures/snickersLogo.png" alt="Snickers Logo" class="center" id="wows1_3"></li>
     </ul>        
 	</div>
     </div>
