--- a/CSA/HTMLStorePage/WebSite/snacks/foods/oreos.html
+++ b/CSA/HTMLStorePage/WebSite/snacks/foods/oreos.html
@@ -88,7 +88,7 @@
         </tr>
     </table>
 
-    <input type="number" id="numberBying" name=pageName() min=0
+    <input align="center" type="number" id="numberBying" name=pageName() min=0 max=24/><br>
 
     <h1><a href="../../index.html">Go Back &#x21A9</a></h1>
     
