worked on scripting, due tonight

--- a/CSA/HTMLStorePage/WebSite/checkout.html
+++ b/CSA/HTMLStorePage/WebSite/checkout.html
@@ -5,8 +5,9 @@
         <meta name = "viewport" content="width=device-width">
         <title>Checkout</title>
         <link href="checkout.css" rel="stylesheet" type="text/css"/>
+        <script src="checkout.js"></script>
     </head>
-    <body id='mainBackground'>
+    <body id='mainBackground' onload="prdcList()">
         <h1>Checkout</h1>
         <table id="checkoutTable"> 
             <tr>
