--- a/CSA/HTMLStorePage/WebSite/index.html
+++ b/CSA/HTMLStorePage/WebSite/index.html
@@ -9,6 +9,7 @@
   <body id='mainBackground'>
     <script src="script.js"></script>
     <h1>SICTC Snacking Web Front</h1>
+    <a href="checkout.html"><button>Checkout</button></a>
     <div class="images">
         <div class="flex-container">
             <div class="spacing">
