--- a/CSA/HTMLStorePage/WebSite/snacks/foods/oreos.html
+++ b/CSA/HTMLStorePage/WebSite/snacks/foods/oreos.html
@@ -88,7 +88,9 @@
         </tr>
     </table>
 
-    <input align="center" type="number" id="numberBying" name=pageName() min=0 max=24/><br>
+    <input type="number" id="numberBuying" name=pageName() min=0 max=24 width="10vw"/><br>
+    <button onclick="addToOrder('6pckOreos', 'numberBuying','priceOfItem')" width="10vw">Add To Order</button>
+    <button onclick="clrMem()" width="10vw">FOR TESTING CLRMEM</button>
 
     <h1><a href="../../index.html">Go Back &#x21A9</a></h1>
     
